# diffyq

./: CMakeLists.txt  README.md  main.cpp
inc/: diffyq.h
src/: diffyq.cpp
